ingress-nginx-controller/test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: httpd
  name: httpd
  namespace: myweb
spec:
  replicas: 3
  selector:
    matchLabels:
      app: httpd
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 30%
      maxUnavailable: 30%
  template:
    metadata:
      labels:
        app: httpd
    spec:
      containers:
      - image: httpd
        name: httpd
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "0.5m"
            memory: "512Mi"
          limits:
            cpu: "1m"
            memory: "1024Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: httpd
  namespace: myweb
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: httpd
